# coindcx-mcp

./: .env  README.md  install.sh  pyproject.toml  test_server.py
coindcx_mcp/: client.py  config.py  server.py
